# polls-app

./: .flake8  .pre-commit-config.yaml  Dockerfile  LICENSE  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
polls_app/polls/: admin.py  admin_views.py  models.py  router.py  serializers.py  users_views.py
polls_app/polls/migrations/: 0001_initial.py  0002_alter_poll_start_date_multiplechoicesquestion_and_more.py  0003_singlechoiceoption_remove_onechoicequestion_poll_and_more.py  0004_poll_passed_users_alter_multiplechoicesanswer_user_and_more.py  0005_remove_poll_passed_users.py
polls_app/polls_app/: settings.py  urls.py
